# proton

./: .gitignore  AGENTS.md  CopyStuffToPi.bat  LICENSE.md  MakeZipOfThirdPartyLibs.bat  Programmer Readme.txt  README.md  SetupVars.bat  base_setup.bat
ArduboySim/: ArduboySim Readme.txt  app_info_setup.bat
ArduboySim/Arduboy/: Arduboy.ino  ardu_main.cpp  ardu_main.h  breakout_bitmaps.cpp  breakout_bitmaps.h
ArduboySim/html5/: BuildAndUpload.bat  UploadToWebsite.bat  build_release.bat
ArduboySim/media/: update_media.bat
ArduboySim/source/: App.cpp  App.h
ArduboySim/windows/: ArduboySim.sln  winArduboySim.vcproj
RTBareBones/: .gitignore  CopyStuffToPiAndCompileLoop.bat  Info.plist  MainWindow.xib  app_info_setup.bat
RTBareBones/AndroidGradle/: BuildAndInstallDebug.bat  BuildFinalBundles.bat  LogCat.bat  build.gradle  local.properties_removethispart_  settings.gradle
RTBareBones/AndroidGradle/app/src/main/cpp/: CMakeLists.txt
RTBareBones/OSX/: RTBareBones-Info.plist  RTBareBones_Prefix.pch  app.icns
RTBareBones/RTBareBones.xcodeproj/: project.pbxproj
RTBareBones/Resources-iPad/: MainWindow-iPad.xib
RTBareBones/android/: AndroidManifest.xml  InstallOnDefaultPhone.bat  InstallOnDefaultPhoneRelease.bat  app_info_setup.bat  build.bat  build.xml  build_prepare.bat  default.properties  project.properties  shell.bat
RTBareBones/html5/: BuildAndUpload.bat  UploadToWebsite.bat  build_release.bat
RTBareBones/linux/: CMakeLists.txt  linux_compile.sh
RTBareBones/media/: log.txt  update_media.bat
RTBareBones/psp2/: CMakeLists.txt
RTBareBones/script/: BuildSourcePackage.bat  MakeWindowsStandAloneZip.bat  ZipMac_RTAddHocVersion.bat
RTBareBones/source/: App.cpp  App.h
RTBareBones/vita/: CMakeLists.txt  compile.sh
RTBareBones/windows_vs2017/: RTBareBones.sln  winRTBareBones.vcxproj  winRTBareBones.vcxproj.filters
RTConsole/: CopyStuffToPiAndCompileLoop.bat  Project Readme.txt  RTConsole-Linux.code-workspace  RTConsole-Windows.code-workspace  app_info_setup.bat  rtconsole.cmake  rtconsole.code-workspace
RTConsole/html5/: UploadToWebsite.bat  build_release.bat
RTConsole/linux/: CMakeLists.txt  linux_compile.sh
RTConsole/source/: App.cpp  App.h  main.cpp  main.h
RTConsole/windows/: CMakeLists.txt  RTConsole.sln  RTConsole.vcproj  windows_compile.bat
RTConsole/windows_vc2017/: RTConsole.sln  RTConsole.vcxproj  RTConsole.vcxproj.filters
RTDink/: CreateGitHubRepository.bat  LICENSE.md  MakeSourceBackup.bat  README.md  app_info_setup.bat
RTDink/OSX/: DinkSmallwoodHD.dmg  Info.plist  PackageDinkOSX.command  app.icns  makedmg  readme.txt
RTDink/RTDink.xcodeproj/: project.pbxproj
RTDink/android/: AndroidManifest.xml
RTDink/html5/: BuildAndRunLocally.bat  BuildAndUpload.bat  RunHTTPServerFromThisDir.bat  UploadToWebsite.bat  build_release.bat
RTDink/media/: LowerCase.bat  delete_all_rttex_files.bat  exclude.txt  game_exclude.txt  update_media.bat
RTDink/script/: BuildAndPackageWindows.bat  BuildAndPackageWindowsBeta.bat  BuildAndroidAndUploadBeta.bat  FTPToSiteWin.bat  UploadOSX_DMG.bat  UploadWindowsVersion.bat  UploadWindowsVersionAsBeta.bat
RTDink/source/: App.cpp  App.h  video_gl.cpp  video_gl.h
RTDink/vita/: CMakeLists.txt
RTDink/windows_vs2017/: iPhoneRTDink.sln  resource.h  winRTDink.aps  winRTDink.rc  winRTDink.vcproj  winRTDink.vcxproj  winRTDink.vcxproj.filters
RTLooneyLadders/: .gitignore  CopyStuffToPiAndCompileLoop.bat  Info.plist  MainWindow.xib  Project Readme.txt  app_info_setup.bat
RTLooneyLadders/OSX/: RTLooneyLadders-Info.plist  RTLooneyLadders_Prefix.pch
RTLooneyLadders/RTLooneyLadders.xcodeproj/: Seth.pbxuser  Seth.perspectivev3  project.pbxproj
RTLooneyLadders/Resources-iPad/: MainWindow-iPad.xib
RTLooneyLadders/linux/: CMakeLists.txt  linux_compile.sh
RTLooneyLadders/media/: exclude.txt  game_exclude.txt  update_media.bat
RTLooneyLadders/source/: App.cpp  App.h
RTLooneyLadders/windows/: RTLooneyLadders.sln  RTLooneyLadders.vcxproj  RTLooneyLadders.vcxproj.filters
RTPack/: CopyStuffToPiAndCompileLoop.bat  Project Readme.txt  app_info_setup.bat
RTPack/html5/: BuildAndUpload.bat  build_release.bat
RTPack/linux/: CMakeLists.txt  linux_compile.sh  prepareAndroid.sh  update_media.sh
RTPack/source/: App.cpp  App.h  FontPacker.cpp  FontPacker.h  TexturePacker.cpp  TexturePacker.h  main.cpp  main.h
RTPack/windows_vc2017/: RTPack.sln  RTPack.vcxproj  RTPack.vcxproj.filters
RTSimpleApp/: CopyStuffToPiAndCompileLoop.bat  Info.plist  MainWindow.xib  app_info_setup.bat
RTSimpleApp/AndroidGradle/: .gitignore  BuildAndInstallDebug.bat  LogCat.bat  PrepareResources.bat  local.properties_removethispart_
RTSimpleApp/OSX/: RTSimpleApp_Prefix.pch  libfmod.dylib
RTSimpleApp/RTSimpleApp.xcodeproj/: project.pbxproj
RTSimpleApp/Resources-iPad/: MainWindow-iPad.xib
RTSimpleApp/android/: AndroidManifest.xml  Clean.bat  StartEmu.bat  ViewLogDefaultPhone.bat  ant.properties  app_info_setup.bat  build.bat  build.xml  buildRelease.bat  build_norebuild.bat  build_prepare.bat  readme.txt
RTSimpleApp/html5/: BuildAndRunLocally.bat  BuildAndUpload.bat  RunHTTPServerFromThisDir.bat  UploadToWebsite.bat  build_release.bat
RTSimpleApp/linux/: CMakeLists.txt  linux_compile.sh
RTSimpleApp/media/: update_media.bat
RTSimpleApp/psp2/: CMakeLists.txt
RTSimpleApp/script/: BuildSourcePackage.bat  FTPToSite.bat  MakeWindowsStandAloneZip.bat  ZipMac_RTAddHocVersion.bat
RTSimpleApp/source/: App.cpp  App.h
RTSimpleApp/vita/: CMakeLists.txt  compile.sh
RTSimpleApp/windows_vc/: RTSimpleApp.sln  winRTSimpleApp.vcxproj  winRTSimpleApp.vcxproj.filters
RTSimpleApp/windows_vc2017/: RTSimpleApp.sln  winRTSimpleApp.vcxproj  winRTSimpleApp.vcxproj.filters
shared/: BaseApp.cpp  BaseApp.h  PlatformEnums.h  PlatformPrecomp.cpp  PlatformPrecomp.h  PlatformSetup.cpp  PlatformSetup.h
shared/Ad/: AdProvider.cpp  AdProvider.h  (+6 more)
tools/RTPack/: CMakeLists.txt  ClanlibUtils.cpp  ClanlibUtils.h  FontPacker.cpp  FontPacker.h  RTPack.sln  RTPack.vcproj  ReadMe.txt  TexturePacker.cpp  TexturePacker.h  build.sh  main.cpp  main.h
(+1391 files in other folders)
